modificación con la dirección de css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Jacqueline Tinti</title>
-		<link rel="stylesheet" type="text/css" href="C:\cv\css\main.css">
+		<link rel="stylesheet" type="text/css" href="C:\cv\main.css">
 	</head>
 	<body>
 		<div class="main-container">
