--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Jacqueline Tinti</title>
 		<link rel="stylesheet" type="text/css" href="C:\cv\main.css">
 	</head>
-	<body>
+	<body bgcolor="blue">
 		<div class="main-container">
 		<aside>
 			<figure id="profile-pic">
