--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Jacqueline Tinti</title>
-		<link rel="stylesheet" type="text/css" href="C:\cv\main.css">
+		<link rel="stylesheet" type="text/css" href="C:\cv\style.css">
 	</head>
-	<body bgcolor="blue">
+	<body>
 		<div class="main-container">
 		<aside>
 			<figure id="profile-pic">
-				<img src="img\foto.jpg" width="250" height="200" alt="Jacqueline Guadalupe T">
+				<img src="C:\cv\foto.jpg" width="250" height="200" alt="Jacqueline Guadalupe T">
 				<figcaption>Jacqueline Guadalupe Tinti Hernandez</figcaption>
 			</figure>
 			<section>
@@ -96,7 +96,7 @@
 				<div class="referencias">
 				<article>
 					<figure>
-						<img src="contacto\icono.jpg" width="100" height="100" alt="icono1">
+						<img src="C:\cv\icono.jpg" width="100" height="100" alt="icono1">
 						<figcaption>Sindy Carolina Tinti Hernandez</figcaption>
 					</figure>
 					<span>+502 5015-7228</span><br>
@@ -104,7 +104,7 @@
 				</article>
 				<article>
 					<figure>
-						<img src="contacto\icono.jpg" width="100" height="100" alt="icono2">
+						<img src="C:\cv\icono.jpg" width="100" height="100" alt="icono2">
 						<figcaption>Wilson Yobani Tinti Hernandez</figcaption>
 					</figure>
 					<span>+502 5428-1846</span><br>
@@ -112,7 +112,7 @@
 				</article>
 					<article>
 					<figure>
-						<img src="contacto\icono.jpg" width="100" height="100" alt="icono1">
+						<img src="C:\cv\icono.jpg" width="100" height="100" alt="icono1">
 						<figcaption>Williams Estuardo Tinti Hernandez</figcaption>
 					</figure>
 					<span>+502 4293-1368</span><br>
@@ -120,7 +120,7 @@
 				</article>
 					<article>
 					<figure>
-						<img src="contacto\icono.jpg" width="100" height="100" alt="icono1">
+						<img src="C:\cv\icono.jpg" width="100" height="100" alt="icono1">
 						<figcaption>Medelin Yasmin López Virula</figcaption>
 					</figure>
 					<span>+502 3833-2605</span><br>
@@ -132,3 +132,4 @@
 		</main>
 	</body>
 </html>
+
